--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "dist/vue-router.common.js",
   "module": "dist/vue-router.esm.js",
   "unpkg": "dist/vue-router.js",
+  "sideEffects": false,
   "type": "module",
   "scripts": {
     "build": "rm -rf dist && cross-env author=kaoniqiwa node build/build.mjs",
@@ -22,10 +23,13 @@
   "peerDependencies": {
     "vue": "^2.6.14"
   },
-  "homepage": "https://github.com/vuejs/router#readme",
+  "homepage": "https://github.com/kaoniqiwa/my-vue-router3/#readme",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/vuejs/router.git"
+    "url": "https://github.com/kaoniqiwa/my-vue-router3/"
+  },
+  "bugs": {
+    "url": "https://github.com/kaoniqiwa/my-vue-router3/issues"
   },
   "author": {
     "name": "Eduardo San Martin Morote",
